libcdi/src/mo_cdi.f90

          real(kind=c_double), value :: lat_2
        end subroutine gridDefLcc2
      end interface
      interface
        subroutine gridInqLcc2(gridID,earth_radius,lon_0,lat_0,lat_1,lat_2) bind(c,name='gridInqLcc2')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out) :: earth_radius
          real(kind=c_double), intent(out) :: lon_0
          real(kind=c_double), intent(out) :: lat_0
          real(kind=c_double), intent(out) :: lat_1
          real(kind=c_double), intent(out) :: lat_2
        end subroutine gridInqLcc2
      end interface
      interface
        subroutine gridDefLaea(gridID,earth_radius,lon_0,lat_0) bind(c,name='gridDefLaea')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: earth_radius
          real(kind=c_double), value :: lon_0
          real(kind=c_double), value :: lat_0
        end subroutine gridDefLaea
      end interface
      interface
        subroutine gridInqLaea(gridID,earth_radius,lon_0,lat_0) bind(c,name='gridInqLaea')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out) :: earth_radius
          real(kind=c_double), intent(out) :: lon_0
          real(kind=c_double), intent(out) :: lat_0
        end subroutine gridInqLaea
      end interface
      interface
        subroutine gridDefArea(gridID,area_vec) bind(c,name='gridDefArea')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(in),dimension(*) :: area_vec
        end subroutine gridDefArea
      end interface
      interface
        subroutine gridInqArea(gridID,area_vec) bind(c,name='gridInqArea')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out),dimension(*) :: area_vec
        end subroutine gridInqArea
      end interface
      interface
        function gridHasArea(gridID) bind(c,name='gridHasArea')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridHasArea
        end function gridHasArea
      end interface
      interface
        subroutine gridDefNvertex(gridID,nvertex) bind(c,name='gridDefNvertex')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: nvertex
        end subroutine gridDefNvertex
      end interface
      interface
        function gridInqNvertex(gridID) bind(c,name='gridInqNvertex')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqNvertex
        end function gridInqNvertex
      end interface
      interface
        subroutine gridDefXbounds(gridID,xbounds_vec) bind(c,name='gridDefXbounds')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(in),dimension(*) :: xbounds_vec
        end subroutine gridDefXbounds
      end interface
      interface
        function gridInqXbounds(gridID,xbounds_vec) bind(c,name='gridInqXbounds')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out),dimension(*) :: xbounds_vec
          integer(kind=c_int) :: gridInqXbounds
        end function gridInqXbounds
      end interface
      interface
        subroutine gridDefYbounds(gridID,ybounds_vec) bind(c,name='gridDefYbounds')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(in),dimension(*) :: ybounds_vec
        end subroutine gridDefYbounds
      end interface
      interface
        function gridInqYbounds(gridID,ybounds_vec) bind(c,name='gridInqYbounds')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out),dimension(*) :: ybounds_vec
          integer(kind=c_int) :: gridInqYbounds
        end function gridInqYbounds
      end interface
      interface
        subroutine gridDefRowlon(gridID,nrowlon,rowlon_vec) bind(c,name='gridDefRowlon')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: nrowlon
          integer(kind=c_int), intent(in),dimension(*) :: rowlon_vec
        end subroutine gridDefRowlon
      end interface
      interface
        subroutine gridInqRowlon(gridID,rowlon_vec) bind(c,name='gridInqRowlon')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), intent(out),dimension(*) :: rowlon_vec
        end subroutine gridInqRowlon
      end interface
      interface
        subroutine gridChangeType(gridID,gridtype) bind(c,name='gridChangeType')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: gridtype
        end subroutine gridChangeType
      end interface
      interface
        subroutine gridDefComplexPacking(gridID,lpack) bind(c,name='gridDefComplexPacking')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: lpack
        end subroutine gridDefComplexPacking
      end interface
      interface
        function gridInqComplexPacking(gridID) bind(c,name='gridInqComplexPacking')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqComplexPacking
        end function gridInqComplexPacking
      end interface
      interface
        subroutine zaxisName(zaxistype,zaxisnamev) bind(c,name='zaxisName')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxistype
          character(kind=c_char), dimension(*) :: zaxisnamev
        end subroutine zaxisName
      end interface
      interface
        function zaxisCreate(zaxistype,size) bind(c,name='zaxisCreate')
          import :: c_int
          integer(kind=c_int), value :: zaxistype
          integer(kind=c_int), value :: size
          integer(kind=c_int) :: zaxisCreate
        end function zaxisCreate
      end interface
      interface
        subroutine zaxisDestroy(zaxisID) bind(c,name='zaxisDestroy')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
        end subroutine zaxisDestroy
      end interface
      interface
        function zaxisInqType(zaxisID) bind(c,name='zaxisInqType')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int) :: zaxisInqType
        end function zaxisInqType
      end interface
      interface
        function zaxisInqSize(zaxisID) bind(c,name='zaxisInqSize')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int) :: zaxisInqSize
        end function zaxisInqSize
      end interface
      interface
        function zaxisDuplicate(zaxisID) bind(c,name='zaxisDuplicate')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int) :: zaxisDuplicate
        end function zaxisDuplicate
      end interface
      interface
        subroutine zaxisResize(zaxisID,size) bind(c,name='zaxisResize')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int), value :: size
        end subroutine zaxisResize
      end interface
      interface
        subroutine zaxisPrint(zaxisID) bind(c,name='zaxisPrint')
          import :: c_int
          integer(kind=c_int), value :: zaxisID
        end subroutine zaxisPrint
      end interface
      interface
        subroutine zaxisDefLevels(zaxisID,levels_vec) bind(c,name='zaxisDefLevels')
          import :: c_int,c_double
          integer(kind=c_int), value :: zaxisID
          real(kind=c_double), intent(in),dimension(*) :: levels_vec
        end subroutine zaxisDefLevels
      end interface
      interface
        subroutine zaxisInqLevels(zaxisID,levels_vec) bind(c,name='zaxisInqLevels')
          import :: c_int,c_double
          integer(kind=c_int), value :: zaxisID
          real(kind=c_double), intent(out),dimension(*) :: levels_vec
        end subroutine zaxisInqLevels
      end interface
      interface
        subroutine zaxisDefLevel(zaxisID,levelID,levels) bind(c,name='zaxisDefLevel')
          import :: c_int,c_double
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int), value :: levelID
          real(kind=c_double), value :: levels
        end subroutine zaxisDefLevel
      end interface
      interface
        function zaxisInqLevel(zaxisID,levelID) bind(c,name='zaxisInqLevel')
          import :: c_int,c_double
          integer(kind=c_int), value :: zaxisID
          integer(kind=c_int), value :: levelID
          real(kind=c_double) :: zaxisInqLevel
        end function zaxisInqLevel
      end interface
      interface
        subroutine zaxisDefNlevRef(gridID,nhlev) bind(c,name='zaxisDefNlevRef')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: nhlev
        end subroutine zaxisDefNlevRef
      end interface
      interface
        function zaxisInqNlevRef(gridID) bind(c,name='zaxisInqNlevRef')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: zaxisInqNlevRef
        end function zaxisInqNlevRef
      end interface
      interface
        subroutine zaxisDefNumber(gridID,number) bind(c,name='zaxisDefNumber')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: number
        end subroutine zaxisDefNumber
      end interface
      interface
        function zaxisInqNumber(gridID) bind(c,name='zaxisInqNumber')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: zaxisInqNumber
        end function zaxisInqNumber
      end interface
      interface
        subroutine zaxisDefUUID(zaxisID,uuid) bind(c,name='zaxisDefUUID')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(16) :: uuid
        end subroutine zaxisDefUUID
      end interface
      interface
        subroutine zaxisInqUUID(zaxisID,uuid) bind(c,name='zaxisInqUUID')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(16) :: uuid
        end subroutine zaxisInqUUID
      end interface
      interface
        subroutine zaxisDefName(zaxisID,name) bind(c,name='zaxisDefName')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(*) :: name
        end subroutine zaxisDefName
      end interface
      interface
        subroutine zaxisInqName(zaxisID,name) bind(c,name='zaxisInqName')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(*) :: name
        end subroutine zaxisInqName
      end interface
      interface
        subroutine zaxisDefLongname(zaxisID,longname) bind(c,name='zaxisDefLongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(*) :: longname
        end subroutine zaxisDefLongname
      end interface
      interface
        subroutine zaxisInqLongname(zaxisID,longname) bind(c,name='zaxisInqLongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
          character(kind=c_char), dimension(*) :: longname
        end subroutine zaxisInqLongname
      end interface
      interface
        subroutine zaxisDefUnits(zaxisID,units) bind(c,name='zaxisDefUnits')
          import :: c_int,c_char
          integer(kind=c_int), value :: zaxisID
